--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -15,26 +15,26 @@ license="All rights reserved"
 # A list of mods - how many allowed here is determined by the individual mod loader
 [[mods]] #mandatory
 # The modid of the mod
-modId="nbtsizefix" #mandatory
+modId="clientsideqol" #mandatory
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
 # ${file.jarVersion} will substitute the value of the Implementation-Version as read from the mod's JAR file metadata
 # see the associated build.gradle script for how to populate this completely automatically during a build
 version="${file.jarVersion}" #mandatory
  # A display name for the mod
-displayName="NBTsizeFIX" #mandatory
+displayName="ClientSideQoL" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification https://mcforge.readthedocs.io/en/latest/gettingstarted/autoupdate/
 #updateJSONURL="https://change.me.example.invalid/updates.json" #optional
 # A URL for the "homepage" for this mod, displayed in the mod UI
 #displayURL="https://change.me.to.your.mods.homepage.example.invalid/" #optional
 # A file name (in the root of the mod JAR) containing a logo for display
-logoFile="none.png" #optional
+logoFile="clientsideqol.png" #optional
 # A text field displayed in the mod UI
 credits="Thanks for inspiration to XLPackets and RandomPatches" #optional
 # A text field displayed in the mod UI
-authors="muriplz" #optional
+authors="BlockOG,muriplz" #optional
 # The description text for the mod (multi line!) (#mandatory)
 description='''
-Increases NBT size limit (2MB -> 10MB)
+Quality of Life
 '''
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
 [[dependencies.examplemod]] #optional
