--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,21 @@
-# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-# This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx3G
+
+# Done to increase the memory available to gradle.
+org.gradle.jvmargs=-Xmx4G
 org.gradle.daemon=false
-modid=nbtsizefix
+modid=clientsideqol
+
+# Fabric Properties
+# check these on https://fabricmc.net/develop
+minecraft_version=1.18.2
+yarn_mappings=1.18.2+build.1
+loader_version=0.13.3
+
+# Mod Properties
+mod_version = 1.1.1
+maven_group = com.example
+archives_base_name = client-side-qol
+
+# Dependencies
+forge_version=0.47.8+1.18.2
+cloth_config_version=6.2.57
+mod_menu_version=3.1.0
